<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/m_black_opacity07"
                />

            <View
                android:layout_width="@dimen/shadow_level1"
                android:layout_height="match_parent"
                android:background="@drawable/shadow_left"
                android:layout_marginLeft="98dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="100dp"
                android:background="@color/m_white"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_height="40dp"
                            android:layout_marginTop="@dimen/space"
                            android:text="@string/edit_filter_label_choose_name"
                            style="@style/ActivityEditFilter_Label"/>

                        <TextView
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/space_x2"
                            android:text="@string/edit_filter_label_choose_icon"
                            style="@style/ActivityEditFilter_Label"/>

                        <TextView
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/space_x2"
                            android:text="@string/edit_filter_label_choose_people"
                            style="@style/ActivityEditFilter_Label"/>

                        <TextView
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/space_x2"
                            android:text="@string/edit_filter_label_choose_state"
                            style="@style/ActivityEditFilter_Label"/>

                        <TextView
                            android:layout_height="48dp"
                            android:layout_marginTop="@dimen/space_x4"
                            android:layout_gravity="bottom"
                            android:text="@string/edit_filter_label_actions"
                            style="@style/ActivityEditFilter_Label"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/filterName"
                            android:layout_height="40dp"
                            android:layout_marginTop="@dimen/space"
                            android:maxLines="1"
                            android:gravity="center_vertical"
                            android:textSize="@dimen/font_normal"
                            android:textColor="@color/font_dark"
                            android:inputType="textCapSentences"
                            style="@style/ActivityEditFilter_Item"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/iconList"
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/space_x2"
                            android:layout_marginLeft="0dp"
                            android:layout_marginRight="0dp"
                            style="@style/ActivityEditFilter_Item"/>

                        <FrameLayout
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/space_x2"
                            android:layout_marginLeft="0dp"
                            android:layout_marginRight="0dp"
                            style="@style/ActivityEditFilter_Item">

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/peopleList"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                            <Button
                                android:id="@+id/peopleEmptyView"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="@string/edit_filter_holder_filter_members_empty"
                                android:textColor="@color/ui_primary"
                                android:visibility="gone"
                                style="?android:attr/borderlessButtonStyle"/>

                        </FrameLayout>

                        <LinearLayout
                            android:layout_height="50dp"
                            android:layout_marginTop="@dimen/space_x2"
                            android:orientation="horizontal"
                            style="@style/ActivityEditFilter_Item">

                            <me.alexeyterekhov.vkfilter.GUI.Common.TripleSwitchView
                                android:id="@+id/filterStateSwitch"
                                android:layout_gravity="center_vertical"
                                style="@style/TripleSwitch.Dark"/>

                            <TextView
                                android:id="@+id/filterStateLabel"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="@dimen/space"
                                android:textSize="@dimen/font_mini"
                                android:gravity="center_vertical"
                                android:textColor="@color/font_dark_tertiary"
                                tools:text="@string/edit_filter_label_filter_allowing"/>

                        </LinearLayout>

                        <Button
                            android:id="@+id/cancelButton"
                            android:layout_width="match_parent"
                            android:layout_marginTop="@dimen/space_x4"
                            android:text="@string/edit_filter_button_cancel"
                            style="@style/FlatButton"/>

                        <Button
                            android:id="@+id/deleteButton"
                            android:layout_width="match_parent"
                            android:text="@string/edit_filter_button_delete"
                            style="@style/FlatButton"/>

                        <Button
                            android:id="@+id/saveButton"
                            android:layout_width="match_parent"
                            android:text="@string/edit_filter_button_save"
                            style="@style/FlatButton"/>

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_shadow"
        android:layout_below="@id/toolbar"
        android:background="@drawable/toolbar_shadow"/>

</RelativeLayout>

